# emplusvault

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  Dockerfile  LICENSE  README.md  TODO.md  alembic.ini  alembic_test.ini  docker-compose.yml  poetry.toml  pyproject.toml
.github/workflows/: python-test.yml
db/: tables.sql
db/versions/: 14a91e8e2186_add_table_to_keep_track_of_entries_that_.py  83f4e38fabef_clean_projection_table.py  96458304d6b0_create_new_embedding_of_size_16.py  9a8b297d6759_row_level_security.py  d830a50955ef_create_user_library_access.py  eb699a8e36eb_add_a_column_for_pose_projections.py
deploy/: emplusvault.api.service
deploy/nginx/: fastapi
docker/: .env.example  docker-compose.yml  load-extensions.sh  pgvector-Dockerfile  weaviate.yml
docker/tests/: docker-compose.yml  load-extensions.sh  pgvector-Dockerfile
emv/: cli.py  settings.py  utils.py
emv/api/: api_settings.py  models.py  router.py  server.py
emv/api/routers/: atlas_router.py  auth_router.py  feature_router.py  library_router.py  media_router.py  projection_router.py  stream_router.py
emv/client/: get_content.py
emv/db/: dao.py  queries.py  utils.py
emv/embeddings/: dr_eval.py
emv/features/: audio.py  image.py  pose.py  pose_utils.py  text.py  wikidata.py
emv/io/: __init__.py  media.py  textures.py
emv/llm/: ingest.py  query.py  retriever.py  vault.py
emv/pipelines/: base.py  ioc.py  mjf.py  rts.py  utils.py  youtube.py
emv/preprocess/: ioc.py  mjf.py  rts.py
emv/storage/: storage.py
kubernetes/images/pose/: Dockerfile  docker-compose.yml  job.yaml
kubernetes/images/pose_binary/: Dockerfile  daemonset.yaml  docker-compose.yml  job.yaml
kubernetes/rabbitmq/: rabbitmq-deployment.yaml  rabbitmq-service.yaml
kubernetes/text/transcript/: Dockerfile  README.md  docker-compose.yml  download_models.py  job.yaml
kubernetes/text/transcript_queue/: Dockerfile  README.md  docker-compose.yml  job.yaml
notebook/: db.ipynb  demo_project.ipynb  evaluate_embeddings.ipynb  ingest.ipynb  ingest_ioc.ipynb  ingest_pipeline.ipynb  ioc.ipynb  location_recognition.ipynb  projection_test.ipynb  speakers.ipynb  test_codebase.ipynb  watch_ioc.ipynb
notebook/embeddings_eval/: evaluate_embeddings.ipynb  ioc_poses_embeddings.ipynb  mjf_embeddings.ipynb  rts_embeddings.ipynb
notebook/ingest/: 0_create_user.ipynb  1_create_media.ipynb  2_create_projection.ipynb  3_create_features.ipynb
notebook/ioc/: analyse_poses.ipynb  correlation_matrix.ipynb  create_projection.ipynb  download_videos.ipynb  filter_poses.ipynb  find_offset.ipynb  ingest_ioc.ipynb  interactive_matching.ipynb  ioc.ipynb  olympic_scores.ipynb  pose_clustering.ipynb  pose_matching.ipynb  poses.ipynb  visualize_poses.ipynb  watch_ioc.ipynb
notebook/llm/: ollama.ipynb  wikidata_disambiguation.ipynb
notebook/mjf/: ingest.ipynb  mjf_projection.ipynb
notebook/raw/: AA1101000650_0.txt  collections.txt  test.json  test2.json
notebook/rts/: aivectors.ipynb  ingest_rts.ipynb  rts_llm_semantics.ipynb  rts_locations.ipynb  rts_sample.ipynb  rts_visual_features.ipynb  speakers.ipynb  test_codebase.ipynb  transcript_queue.ipynb
public/: credits.txt  doc.md  index.html  legal.txt
public/assets/: small_atlases.json
public/js/: Galaxy_of_videos.json  cables.min.js  cgl_copytexture.js  cgl_rendertargets.js  cgl_shadermodifier.js  libs.core.min.js  ops.js  vargetset.js
public/js/assets/63ef55fa1cda93f74e0e87f7/: d3-octree.min.js
rts/: __init__.py  cli.py  db_settings.py  ingest.py  metadata.py  pipeline.py  settings.py  utils.py
rts/api/: dao.py  models.py  router.py  server.py  settings.py
rts/api/routers/: atlas_router.py  auth_router.py  feature_router.py  library_router.py  media_router.py  projection_router.py  stream_router.py
rts/client/: get_content.py
rts/db/: __init__.py  dao.py  fulltext.py  queries.py  utils.py
rts/features/: audio.py  cities.json  image.py  pose.py  text.py
rts/io/: __init__.py  archive.py  media.py
rts/pipelines/: base.py  ioc.py  mjf.py  rts.py
rts/preprocess/: ioc.py  rts.py
rts/storage/: storage.py
scripts/: consumer.py  extract_transcripts.py  insert_into_queue.py  move_clips.sh  mux_archive.py  producer.py  rsync_clips.sh
tests/: conftest.py  test_authentication.py  test_features.py  test_library.py  test_media.py  test_media_router.py  test_pose.py  test_projection.py  test_similarity.py
